[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Projects/ProjectsScreen.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Projects/ProjectOption.tscn" type="PackedScene" id=2]

[node name="Projects" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Options" type="Control" parent="CenterContainer"]
margin_left = 320.0
margin_top = 320.0
margin_right = 320.0
margin_bottom = 320.0

[node name="ProjectOption1" parent="CenterContainer/Options" instance=ExtResource( 2 )]
margin_left = -170.0
margin_top = -144.0
margin_right = -42.0
margin_bottom = 15.0

[node name="ProjectOption2" parent="CenterContainer/Options" instance=ExtResource( 2 )]
margin_left = 51.0
margin_top = -144.0
margin_right = 179.0
margin_bottom = 15.0

[node name="ProjectOption3" parent="CenterContainer/Options" instance=ExtResource( 2 )]
margin_left = -170.0
margin_top = 73.0
margin_right = -42.0
margin_bottom = 232.0

[node name="ProjectOption4" parent="CenterContainer/Options" instance=ExtResource( 2 )]
margin_left = 51.0
margin_top = 73.0
margin_right = 179.0
margin_bottom = 232.0
